vertical align correctly, set fontweight of placeholder to match input

--- a/src/css/inputs.styl
+++ b/src/css/inputs.styl
@@ -10,11 +10,12 @@
 
 .placeholder
   left: 0
-  top: 2px
+  top: 10px
   position: absolute
   transition: all ($themeTransitionTime * 0.5) linear
   pointer-events: none
   line-height: 1em
+  font-weight: normal
 
 // .valid + .placeholder
 //   color: $themeGoodColor
